--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "bytes": "^3.1.0",
     "lodash": "^4.17.11",
     "plotly.js": "^1.46.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.3",
     "react-plotly.js": "^2.3.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
